# telegramStarsBot

./: .env.example  .gitignore  README.md  Readme_bot.md  bot.py  config.example.toml  config.toml  config_reader.py  dispatcher.py  logs.py  plan.txt  pyproject.toml  requirements.txt  scenario.txt  utils.py
.github/workflows/: deploy.yml
database/: README.md  interface.py  sqlalchemy.py
di/: README.md  container.py
filters/: README.md  is_admin.py  is_owner.py  is_subscribed.py  referral.py
handlers/: README.md  __init__.py  admin_actions.py  base.py  group_events.py  novel.py  payments.py  personal_actions.py  referral.py
keyboards/: README.md  admin.py  confirm.py  factory.py  menu.py  subscription.py
l10n/: locale.ftl
middlewares/: README.md  __init__.py  check_subscription.py  db.py
migrations/versions/: add_unique_user_id.py
models/: README.md  __init__.py  enums.py  novel.py  payment.py  referral.py  user.py
repositories/: README.md  base.py  novel.py  payment.py  referral.py
services/: README.md  admin.py  novel.py  payment.py  referral.py
tests/: conftest.py  test_handlers.py  test_models.py  test_novel.py  test_personal_actions.py  test_referral.py  test_text_utils.py
tests/test_handlers/: test_admin_actions.py
tests/test_services/: test_novel_service.py
unit_of_work/: unit_of_work.py
utils/: db.py  image_cache.py  openai_helper.py  referral.py  referral_processor.py  rewards.py  text_utils.py
