[project]
name = "telegramStarsBot"
version = "0.1.0"
description = "Telegram bot for Stars donations"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310" 

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
